--- a/guru.css
+++ b/guru.css
@@ -105,7 +105,7 @@ article{
     margin: 20px;
 
     /* Flexbox */
-    flex: 2;
+    flex: 1;
 }
 
 .pic_rhs{ 
@@ -145,12 +145,17 @@ article{
     /* margin: 20px; */
     background-color: clear;
     flex-direction: column;
+    display: flex;
+    justify-content: space-around;
 }
 
 .spreadtext{
+    display: flex;
+    justify-content: space-between;
+    /* box-sizing: border-box; */
     color: black;
     background-color: lightskyblue;
-    margin: 20px;
+    margin-bottom: 40px;
     font-size: 1.2em;
 }
 
@@ -160,7 +165,9 @@ article{
 
 .spreadtext-img{
     border: 2px solid red;
+    width: 10%;
     float:left;
+    background-color: lightskyblue;
 }
 
 .FW{
